--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,13 @@
     "require": {
         "php": ">=7.2",
         "admad/cakephp-jwt-auth": "^3.0",
+        "cakephp/authentication": "2.0",
         "cakephp/cakephp": "^4.3",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "laminas/laminas-diactoros": "^2.2.2",
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "paragonie/sodium_compat": "^1.17"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
